<resources>
    <string name="app_name">EzTryClothes</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="type" translatable="false">Spinner</string>
    <string name="Color">Color :</string>
    <string name="Quantity">Quantity :</string>
    <string name="Material">Material :</string>
    <string name="Description">Description :</string>
    <string name="AddToShoppingCart">Add To Shopping Cart</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="ConfirmPassword">Confirm Password</string>
    <string name="Register">Register</string>
    <string name="Measurements">Measurements</string>
    <string name="Bustgirth">Bust girth :</string>
    <string name="Waistgirth">Waist girth :</string>
    <string name="Hipgirth">Hip girth :</string>

    <string name="Backneckheight">Back neck height :</string>
    <string name="Upperbody">Upper body</string>
    <string name="Necktoupperhiplength">Neck to upper hip length :</string>
    <string name="Frontshoulderwidth">Front shoulder width :</string>
    <string name="Acrossbackshoulderwidth">Across back shoulder width :</string>
    <string name="Acrossbackwidth">Across back width :</string>
    <string name="Shoulderlength">Shoulder length :</string>
    <string name="Chestwidth">Chest width :</string>
    <string name="Underbustgirth">Under bust girth :</string>
    <string name="Upperchestgirth">Upper chest girth :</string>
    <string name="Abdomengirth">Abdomen girth :</string>
    <string name="Backshoulderwidth">Back shoulder width :</string>
    <string name="Neckgirth">Neck girth :</string>
    <string name="Upperarmgirth">Upper-arm girth :</string>
    <string name="Outerarmlength">Outer arm length :</string>
    <string name="Jacketlength">Jacket length :</string>
    <string name="Torsoheight">Torso height :</string>
    <string name="Backnecktohiplength">Back neck to hip length :</string>
    <string name="Waistbreadth">Waist breadth :</string>
    <string name="Lowerbody">Lower body</string>
    <string name="Thighgirth">Thigh girth :</string>
    <string name="Hipheight">Hip height :</string>
    <string name="Insidelegheight">Inside leg height :</string>
    <string name="Upperhipgirth">Upper hip girth :</string>
    <string name="ALL">ALL</string>
    <string name="MEN">MEN</string>
    <string name="WOMEN">WOMEN</string>
    <string name="Frontphoto">Front photo</string>
    <string name="Sidephoto">Side photo</string>
    <string name="HowtoTakePhoto">*How to Take Photo*</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Displayname">Display name</string>
    <string name="Phonenumber">Phone number</string>
    <string name="Age">Age</string>
    <string name="Height">Height(150-200cm)</string>
    <string name="Weight">Weight(KG)</string>
    <string name="Birth">Birth</string>
    <string name="Address">Address</string>
    <string name="Update">Update</string>
    <string name="CheckOut">Check Out</string>
    <string name="OrderDate">Order Date :</string>
    <string name="Totalamount">Total amount :</string>
    <string name="DeliveryTo">Delivery To :</string>
    <string name="ProductName">Product Name :</string>
    <string name="ProductPrice">Product Price: $</string>
    <string name="loginforfurtherdetail">login for further detail</string>
    <string name="loginatthesettingpage">login at the setting page</string>
    <string name="Mainmenu">Main menu</string>
    <string name="Measuring">Measuring</string>
    <string name="FittingRoom">Fitting Room</string>
    <string name="ShoppingCart">Shopping Cart</string>
    <string name="PurchaseHistory">Purchase History</string>
    <string name="Profile">Profile</string>
    <string name="logout">logout</string>
    <string name="register">register</string>
    <string name="YourMeasurement">Your Measurement</string>
    <string name="PleasechooseClothesType">Please choose Clothes Type</string>
    <string name="profile">Your Profile</string>
    <string name="logininfirst">You need to login in first</string>
    <string-array name="type">
        <item>Hoodies</item>
        <item>Shirt</item>
        <item>T-Shirt</item>
        <item>Dress</item>
        <item>jeans</item>
        <item>shorts</item>
    </string-array>
    <string-array name="men">
        <item>Hoodies</item>
        <item>Shirt</item>
        <item>T-Shirt</item>
        <item>jeans</item>
        <item>shorts</item>
    </string-array>
    <string-array name="women">
        <item>Dress</item>
    </string-array>
    <string name="Help">Help</string>
    <string name="Username">Username :</string>
    <string name="PhoneNumber">Phone Number :</string>
    <string name="Menstopsizechart">Men\'s top size chart</string>
    <string name="Womenstopsizechart">Women\'s top size chart</string>
    <string name="Systemsize">System size</string>
    <string name="Length">Length</string>
    <string name="Bust">Bust</string>
    <string name="Shoulderwidth">Shoulder width</string>
    <string name="Waistline">Waistline</string>
    <string name="GettingData">Getting Data, Please wait...</string>
    <string name="SizeGuide">Size Guide</string>
    <string name="Pleasewait">Loading, Please wait...</string>
    <string name="size">Size :</string>
    <string name="suggesrupper">Suggestion upper clothes size:</string>
    <string name="suggestlower">Suggestion lower clothes size:</string>
    <string name="shoppingCartempty">Your shopping Cart is empty</string>
    <string name="noclothes">You have not choose any clothes</string>
    <string name="outofstock">This item is out of stock</string>
    <string name="question_order">\nAre you sure continue order?(The item above cannot buy now)</string>
    <string name="Yes">Yes</string>
    <string name="buynexttime">No, i buy when it have stock</string>
    <string name="Hips">Hips</string>
    <string name="Mensbottomsizechart">Men\'s bottom size chart</string>
    <string name="Womensbottomsizechart">Women\'s bottom size chart</string>
    <string name="ShoulderWidth">Shoulder Width</string>
    <string name="PleaseRestartthepage">Please Restart the page</string>
</resources>
